--- a/src/pages/editpage.css
+++ b/src/pages/editpage.css
@@ -3,8 +3,7 @@
     font-family: 'Bebas Neue', cursive;
     padding-left: 2%;
     font-size: x-large;
-    padding-top: 2%;
-    width: 100%;
+    padding-top: 2%;    
     color: yellow;
   }
 
